data/derived/fa15/progs/unify/prog2418.ml.out
Characters 33-41:
  let stringOfList f l = sepConcat List.map l;;
                                   ^^^^^^^^
Error: This expression has type ('a -> 'b) -> 'a list -> 'b list
       but an expression was expected of type string
